--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,18 +30,14 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /opt/ngx-nestjs-services/ngx-auth-service
-
             echo "🔑 Writing .env from GitHub secrets..."
-            cat <<EOF > .env
-              PORT=${{ secrets.PORT }}
-              JWT_SECRET=${{ secrets.JWT_SECRET }}
-              MONGODB_URI=${{ secrets.MONGODB_URI }}
-              JWT_ISSUER=${{ secrets.JWT_ISSUER }}
-              JWT_AUDIENCE=${{ secrets.JWT_AUDIENCE }}
-              JWT_ACCESS_TOKEN_TTL=${{ secrets.JWT_ACCESS_TOKEN_TTL }}
-              JWT_REFRESH_TOKEN_TTL=${{ secrets.JWT_REFRESH_TOKEN_TTL }}
-              EOF
-
+            echo "PORT=${{ secrets.PORT }}" > .env
+            echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
+            echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
+            echo "JWT_ISSUER=${{ secrets.JWT_ISSUER }}" >> .env
+            echo "JWT_AUDIENCE=${{ secrets.JWT_AUDIENCE }}" >> .env
+            echo "JWT_ACCESS_TOKEN_TTL=${{ secrets.JWT_ACCESS_TOKEN_TTL }}" >> .env
+            echo "JWT_REFRESH_TOKEN_TTL=${{ secrets.JWT_REFRESH_TOKEN_TTL }}" >> .env
             echo "🚀 Building and starting container..."
             docker build -t ngx-auth-service .
             docker stop ngx-auth-service || true && docker rm ngx-auth-service || true
